2005-02-04  Richard Hult  <richard@imendio.com>

	* main.c (main): Update description on how to add notification
	area for the new "add to panel" dialog. Patch from uid0@akl.lt,
	fixes bug #166057.

2005-02-03  Richard Hult  <richard@imendio.com>

	* drwright.c (break_window_postpone_cb), (maybe_change_state),
	(popup_break_cb): Go back to the timer value from before the break
	if postponing a manual break. Fixes bug #134595, based on patch
	from Vinay M R <vinay.mandyakoppal@wipro.com>. Modified to use the
	right enum type and changed to update the tooltip immendiately
	after a break.

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* drw-selection.c: (drw_selection_start): ANSIfication.
	* drwright.c: NULL vs. 0

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-10-14  Richard Hult  <richard@imendio.com>

	* drw-break-window.c (drw_break_window_init): Remove unecessary
	frame, fixes a bug with the transparent background.

2004-07-28  Richard Hult  <richard@imendio.com>

	* drw-break-window.c: Patch from Markus Berg <mberg@hp.com> to fix
	bug #123141.

	* drwright.c: Remove some cruft. Shorten the warning period a bit.

2004-05-02  Richard Hult  <richard@imendio.com>

	* drw-monitor.c Raise the threshold for detecting activity, makes
	totem not trigger typing breaks. Fixes bug #121876.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-17  Richard Hult  <richard@imendio.com>

	* drw-break-window.c (drw_break_window_init): Don't make the
	postpone button focused right away, makes the fix for #126179 a
	lot better.

	* drwright.c: Don't create break window if we already have one,
	fixes bug #134455. Don't make about box modal, fixes bug #134594.
