@@ -1,5 +1,8 @@
 2005-02-04  Richard Hult  <richard@imendio.com>
 
+	* drwright.c: Revert the patch from below since it fixes #134595
+	but breaks other things. Keep the tooltip changes though.
+
 	* main.c (main): Update description on how to add notification
 	area for the new "add to panel" dialog. Patch from uid0@akl.lt,
 	fixes bug #166057.
